// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaDBQueryCreators getMongoEmptyFullSizesCondition should return correct condition with folderPath 1`] = `
{
  "$and": [
    {
      "$expr": {
        "$eq": [
          {
            "$indexOfCP": [
              "$filePath",
              "/path/to/folder/",
            ],
          },
          0,
        ],
      },
    },
    {
      "mimetype": {
        "$in": [
          "video/x-msvideo",
          "video/avi",
          "video/x-flv",
          "video/x-matroska",
          "video/quicktime",
          "video/mp4",
          "video/mpeg",
          "video/ogg",
          "video/webm",
          "video/x-ms-wmv",
          "image/heic",
        ],
      },
    },
    {
      "$or": [
        {
          "fullSizeJpg": {
            "$exists": false,
          },
        },
        {
          "fullSizeJpg": {
            "$eq": null,
          },
        },
        {
          "fullSizeJpg": {
            "$eq": "",
          },
        },
      ],
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoEmptyFullSizesCondition should return correct condition with mimeTypes 1`] = `
{
  "$and": [
    {},
    {
      "mimetype": {
        "$in": [
          "video/mp4",
        ],
      },
    },
    {
      "$or": [
        {
          "fullSizeJpg": {
            "$exists": false,
          },
        },
        {
          "fullSizeJpg": {
            "$eq": null,
          },
        },
        {
          "fullSizeJpg": {
            "$eq": "",
          },
        },
      ],
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoEmptyFullSizesCondition should return correct condition with mimeTypes and folderPath 1`] = `
{
  "$and": [
    {
      "$expr": {
        "$eq": [
          {
            "$indexOfCP": [
              "$filePath",
              "/path/to/folder/",
            ],
          },
          0,
        ],
      },
    },
    {
      "mimetype": {
        "$in": [
          "video/mp4",
        ],
      },
    },
    {
      "$or": [
        {
          "fullSizeJpg": {
            "$exists": false,
          },
        },
        {
          "fullSizeJpg": {
            "$eq": null,
          },
        },
        {
          "fullSizeJpg": {
            "$eq": "",
          },
        },
      ],
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoEmptyFullSizesCondition should return correct condition without mimeTypes and folderPath 1`] = `
{
  "$and": [
    {},
    {
      "mimetype": {
        "$in": [
          "video/x-msvideo",
          "video/avi",
          "video/x-flv",
          "video/x-matroska",
          "video/quicktime",
          "video/mp4",
          "video/mpeg",
          "video/ogg",
          "video/webm",
          "video/x-ms-wmv",
          "image/heic",
        ],
      },
    },
    {
      "$or": [
        {
          "fullSizeJpg": {
            "$exists": false,
          },
        },
        {
          "fullSizeJpg": {
            "$eq": null,
          },
        },
        {
          "fullSizeJpg": {
            "$eq": "",
          },
        },
      ],
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoEmptyPreviewsCondition should return correct condition with folderPath 1`] = `
{
  "$and": [
    {
      "$expr": {
        "$eq": [
          {
            "$indexOfCP": [
              "$filePath",
              "/path/to/folder/",
            ],
          },
          0,
        ],
      },
    },
    {
      "mimetype": {
        "$in": [
          "image/jpeg",
          "image/jpg",
          "image/png",
          "image/heic",
          "image/gif",
          "image/x-adobe-dng",
          "video/x-msvideo",
          "video/avi",
          "video/x-flv",
          "video/x-matroska",
          "video/quicktime",
          "video/mp4",
          "video/mpeg",
          "video/ogg",
          "video/webm",
          "video/x-ms-wmv",
        ],
      },
    },
    {
      "$or": [
        {
          "preview": {
            "$exists": false,
          },
        },
        {
          "preview": {
            "$eq": null,
          },
        },
        {
          "preview": {
            "$eq": "",
          },
        },
      ],
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoEmptyPreviewsCondition should return correct condition with mimeTypes 1`] = `
{
  "$and": [
    {},
    {
      "mimetype": {
        "$in": [
          "image/jpeg",
          "video/mp4",
        ],
      },
    },
    {
      "$or": [
        {
          "preview": {
            "$exists": false,
          },
        },
        {
          "preview": {
            "$eq": null,
          },
        },
        {
          "preview": {
            "$eq": "",
          },
        },
      ],
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoEmptyPreviewsCondition should return correct condition with mimeTypes and folderPath 1`] = `
{
  "$and": [
    {
      "$expr": {
        "$eq": [
          {
            "$indexOfCP": [
              "$filePath",
              "/path/to/folder/",
            ],
          },
          0,
        ],
      },
    },
    {
      "mimetype": {
        "$in": [
          "image/jpeg",
          "video/mp4",
        ],
      },
    },
    {
      "$or": [
        {
          "preview": {
            "$exists": false,
          },
        },
        {
          "preview": {
            "$eq": null,
          },
        },
        {
          "preview": {
            "$eq": "",
          },
        },
      ],
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoEmptyPreviewsCondition should return correct condition without mimeTypes and folderPath 1`] = `
{
  "$and": [
    {},
    {
      "mimetype": {
        "$in": [
          "image/jpeg",
          "image/jpg",
          "image/png",
          "image/heic",
          "image/gif",
          "image/x-adobe-dng",
          "video/x-msvideo",
          "video/avi",
          "video/x-flv",
          "video/x-matroska",
          "video/quicktime",
          "video/mp4",
          "video/mpeg",
          "video/ogg",
          "video/webm",
          "video/x-ms-wmv",
        ],
      },
    },
    {
      "$or": [
        {
          "preview": {
            "$exists": false,
          },
        },
        {
          "preview": {
            "$eq": null,
          },
        },
        {
          "preview": {
            "$eq": "",
          },
        },
      ],
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoFilesCondition should return correct condition with folderPath 1`] = `
{
  "$and": [
    {
      "$expr": {
        "$eq": [
          {
            "$indexOfCP": [
              "$filePath",
              "/path/to/folder/",
            ],
          },
          0,
        ],
      },
    },
    {
      "mimetype": {
        "$in": [
          "image/jpeg",
          "image/jpg",
          "image/png",
          "image/heic",
          "image/gif",
          "image/x-adobe-dng",
          "video/x-msvideo",
          "video/avi",
          "video/x-flv",
          "video/x-matroska",
          "video/quicktime",
          "video/mp4",
          "video/mpeg",
          "video/ogg",
          "video/webm",
          "video/x-ms-wmv",
        ],
      },
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoFilesCondition should return correct condition with mimeTypes 1`] = `
{
  "$and": [
    {},
    {
      "mimetype": {
        "$in": [
          "image/jpeg",
          "video/mp4",
        ],
      },
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoFilesCondition should return correct condition with mimeTypes and folderPath 1`] = `
{
  "$and": [
    {
      "$expr": {
        "$eq": [
          {
            "$indexOfCP": [
              "$filePath",
              "/path/to/folder/",
            ],
          },
          0,
        ],
      },
    },
    {
      "mimetype": {
        "$in": [
          "image/jpeg",
          "video/mp4",
        ],
      },
    },
  ],
}
`;

exports[`MediaDBQueryCreators getMongoFilesCondition should return correct condition without mimeTypes and folderPath 1`] = `
{
  "$and": [
    {},
    {
      "mimetype": {
        "$in": [
          "image/jpeg",
          "image/jpg",
          "image/png",
          "image/heic",
          "image/gif",
          "image/x-adobe-dng",
          "video/x-msvideo",
          "video/avi",
          "video/x-flv",
          "video/x-matroska",
          "video/quicktime",
          "video/mp4",
          "video/mpeg",
          "video/ogg",
          "video/webm",
          "video/x-ms-wmv",
        ],
      },
    },
  ],
}
`;
